Minor login styling cleanup

--- a/client/src/components/Login/styles.scss
+++ b/client/src/components/Login/styles.scss
@@ -8,6 +8,10 @@
 .loginCard {
   width: 300px;
   input {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+  }
+
+  button {
+    margin-top: 10px;
   }
 }
